tests/pass/molda_field_assignment.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    Pessoa pessoa = Pessoa::{nomi: "jose", idadi: 60};
    pessoa.idadi = 61;
    pessoa.idadi += 1;
    mostran(pessoa.idadi);
}
