tests/fail/fail_undefined_global_initializer.kr
nter g = h + 1;

fn inisiu() {
    mostran(g);
}
